fix: Group Titles should be aligned in center

--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -692,7 +692,7 @@ $slick-draggable-group-delete-font-size:                    16px !default;
 $slick-draggable-group-delete-vertical-align:               baseline !default;
 $slick-draggable-group-toggle-all-border:                   1px solid #c7c7c7 !default;
 $slick-draggable-group-toggle-all-border-radius:            3px !default;
-$slick-draggable-group-toggle-all-icon-color:                    $slick-icon-group-color !default;
+$slick-draggable-group-toggle-all-icon-color:               $slick-icon-group-color !default;
 $slick-draggable-group-toggle-all-margin-right:             15px !default;
 $slick-draggable-group-toggle-all-padding:                  0 8px !default;
 $slick-draggable-group-toggle-all-position:                 relative !default;
@@ -703,6 +703,9 @@ $slick-draggable-group-toggle-all-text-margin:              0 0 0 2px !default;
 $slick-draggable-group-toggle-all-icon-font-size:           24px !default;
 $slick-draggable-group-toggle-collapsed-icon-svg-path:      $slick-icon-group-collapsed-svg-path !default;
 $slick-draggable-group-toggle-expanded-icon-svg-path:       $slick-icon-group-expanded-svg-path !default;
+$slick-draggable-group-title-display:                       inline-flex !default;
+$slick-draggable-group-title-align-items:                   center !default;
+$slick-draggable-group-title-gap:                           4px !default;
 $slick-draggable-group-title-height:                        20px !default;
 $slick-draggable-group-title-line-height:                   20px !default;
 $slick-draggable-group-title-vertical-align:                none !default;
